Quick fix for HIW page alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -11509,6 +11509,7 @@ body.hiw .single {
   padding-top: 0;
 }
 body.hiw .single .container {
+  margin-left: -20px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
